Use types from @/types/models

--- a/docs/api-docs/api-reference/introduction.mdx
+++ b/docs/api-docs/api-reference/introduction.mdx
@@ -1,15 +1,15 @@
 ---
 title: 'Getting Started'
-description: 'Introduction to the FDAi API and how to get started'
+description: 'Introduction to the dFDA API and how to get started'
 ---
 
 <Note>
-  Welcome to the FDAi API documentation! This guide will help you get started with using the FDAi API to build powerful applications and integrate data insights.
+  Welcome to the dFDA API documentation! This guide will help you get started with using the dFDA API to build powerful applications and integrate data insights.
 </Note>
 
 ## API Overview
 
-The FDAi API provides a comprehensive set of endpoints for tracking measurements, analyzing data, managing studies, and more. With the FDAi API, you can:
+The dFDA API provides a comprehensive set of endpoints for tracking measurements, analyzing data, managing studies, and more. With the dFDA API, you can:
 
 - Record and manage user measurements
 - Retrieve user-specific analysis settings and statistics
@@ -18,7 +18,7 @@ The FDAi API provides a comprehensive set of endpoints for tracking measurements
 - Perform advanced analytics and data correlations
 
 <Card
-  title="FDAi API Specification"
+  title="dFDA API Specification"
   icon="file-code"
   href="/api-reference/openapi.yml"
 >
@@ -40,15 +40,15 @@ Make sure to keep your client credentials secure and do not share them publicly.
   icon="lock"
   href="/guides/get-access-token"
 >
-Learn more about authenticating with the FDAi API
+Learn more about authenticating with the dFDA API
 </Card>
 
 Getting Started
-To start using the FDAi API, follow these steps:
+To start using the dFDA API, follow these steps:
 
 Sign up for an account at https://builder.dfda.earth to obtain your API credentials.
 Explore the API endpoints and their functionalities in the API Reference section.
-Check out the Guides section for tutorials and examples on how to use the FDAi API for various use cases.
-Start building your application by making requests to the FDAi API endpoints using your client credentials.
+Check out the Guides section for tutorials and examples on how to use the dFDA API for various use cases.
+Start building your application by making requests to the dFDA API endpoints using your client credentials.
 
 If you have any questions or need assistance, feel free to [create an issue](https://github.com/FDA-AI/FDAi/issues/new)
