--- a/docs/api-docs/guides/get-access-token.mdx
+++ b/docs/api-docs/guides/get-access-token.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting an Access Token
-description: This is the first step to interact with the FDAi API. Learn how to create a user and get an access token.
+description: This is the first step to interact with the dFDA API. Learn how to create a user and get an access token.
 ---
 
 You can check the [API documentation](../api-reference/user/post-user) to generate code to do this in any language.
