--- a/docs/api-docs/introduction.mdx
+++ b/docs/api-docs/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the FDAi API Documentation'
+description: 'Welcome to the dFDA API Documentation'
 ---
 
 <img
@@ -16,7 +16,7 @@ description: 'Welcome to the FDAi API Documentation'
 
 ## Getting Started
 
-To start using the FDAi API, follow these steps:
+To start using the dFDA API, follow these steps:
 
 <CardGroup cols={2}>
   <Card
@@ -35,9 +35,9 @@ To start using the FDAi API, follow these steps:
   </Card>
 </CardGroup>
 
-## Build with FDAi
+## Build with the API
 
-Leverage the FDAi API to build powerful applications and integrate data insights.
+Leverage the dFDA API to build powerful applications and integrate data insights.
 
 <CardGroup cols={2}>
   <Card
@@ -45,34 +45,34 @@ Leverage the FDAi API to build powerful applications and integrate data insights
     icon="user"
     href="/guides/get-access-token"
   >
-    The first step to interact with the FDAi API is to create an FDAi user linked to the user in your system
+    The first step to interact with the dFDA API is to create a user linked to the user in your system
   </Card>
   <Card
     title="Create Measurements"
     icon="chart-line"
     href="/guides/record-measurements"
   >
-    Learn how to record and manage measurements using the FDAi API
+    Learn how to record and manage measurements
   </Card>
   <Card
     title="Get Measurements"
     icon="chart-line"
     href="/guides/get-measurements"
   >
-    Learn how to record and manage measurements using the FDAi API
+    Learn how to retrieve measurements
   </Card>
   <Card
     title="Create a Study"
     icon="flask"
     href="/guides/create-study"
   >
-    Create studies using the FDAi API's study management features
+    Create studies using the dFDA study management features
   </Card>
 </CardGroup>
 
 ## Community and Support
 
-Connect with the FDAi community and get the support you need.
+Connect with the community and get the support you need.
 
 <CardGroup cols={2}>
   <Card
